# scrabble

./: Makefile  README.md  docker-compose.yml  play.py
api/: .env  .gitignore  Dockerfile  app_start.sh  auth_handler.py  entrypoint.sh  main.py  prod.env  prod2.env  pyproject.toml  requirements.txt  test_main.py
api/models/: Game.py  GameUser.py  Move.py  SQLModelBase.py  User.py
db/: dump.sql
vuejs/: Dockerfile  package-lock.json  package.json  scrabble.html
vuejs/vite-project/: .env  .env.production  index.html  package-lock.json  package.json  vite.config.js
vuejs/vite-project/src/: App.vue  main.js  style.css
vuejs/vite-project/src/components/: Dialog.vue
vuejs/vite-project/src/helpers/: api.js  axios-wrapper.js  router.js
vuejs/vite-project/src/stores/: auth.store.js
vuejs/vite-project/src/views/: Friends.vue  GameView.vue  Games.vue  HomeView.vue  LoginView.vue  SignupView.vue
