[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "jwt>=1.4.0",
    "mariadb>=1.1.13",
    "numpy>=2.3.3",
    "passlib>=1.7.4",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "pytest>=8.4.2",
    "python-decouple>=3.8",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.35.0",
]
